--- a/style/scss/_interface.scss
+++ b/style/scss/_interface.scss
@@ -1,18 +1,19 @@
 .control{
+  z-index: 2;
   position: absolute;
   .btn_start{
-    z-index: 22;
     position: relative;
     width: 100px;
     height: 50px;
     background-color: chocolate;
     border-radius: 10px;
     box-shadow:0 10px 0 chartreuse;
-    transition: 1s linear;
     top: 0;
-    & :hover{
-      box-shadow:0 0 0 chartreuse;
+    transition: .1s linear;
+    &:hover{
       top: 5px;
+      box-shadow:0 5px 0 chartreuse;
+      cursor: pointer;
     }
     p{
       text-align: center;
