--- a/style/scss/_map.scss
+++ b/style/scss/_map.scss
@@ -10,8 +10,14 @@
   position: absolute;
   width: 600px;
   height: 530px;
-  background-color: white;
   top: 80px;
   left: 380px;
-  opacity: 0.5;
+  
+}
+.zone_marker{
+  position: absolute;
+  width: 600px;
+  height: 530px;
+  top: 80px;
+  left: 380px;
 }
