--- a/style/css/style.css
+++ b/style/css/style.css
@@ -14,6 +14,9 @@
   height: 530px;
   top: 80px;
   left: 380px;
+  transition: 0.3s linear;
+  border: 3px solid black;
+  opacity: 0;
 }
 
 .zone_marker {
@@ -24,11 +27,17 @@
   left: 380px;
 }
 
+.marker {
+  position: absolute;
+  display: block;
+  width: 70px;
+  height: 70px;
+}
+
 .control {
   z-index: 2;
   position: absolute;
 }
-
 .control .btn_start {
   position: relative;
   width: 100px;
@@ -37,15 +46,13 @@
   border-radius: 10px;
   box-shadow: 0 10px 0 chartreuse;
   top: 0;
-  transition: .1s linear;
+  transition: 0.1s linear;
 }
-
 .control .btn_start:hover {
   top: 5px;
   box-shadow: 0 5px 0 chartreuse;
   cursor: pointer;
 }
-
 .control .btn_start p {
   text-align: center;
   font-size: 30px;
@@ -70,14 +77,4 @@ body {
   margin: 0 auto;
 }
 
-.marker {
-  position: absolute;
-  width: 20px;
-  height: 20px;
-  background-color: blue;
-  border-radius: 50%;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  -ms-border-radius: 50%;
-  -o-border-radius: 50%;
-}
+/*# sourceMappingURL=style.css.map */
