--- a/style/scss/_map.scss
+++ b/style/scss/_map.scss
@@ -12,7 +12,9 @@
   height: 530px;
   top: 80px;
   left: 380px;
-  
+  transition: .3s linear;
+  border: 3px solid black;
+  opacity: 0;
 }
 .zone_marker{
   position: absolute;
@@ -20,4 +22,12 @@
   height: 530px;
   top: 80px;
   left: 380px;
+
+}
+.marker{
+  position: absolute;
+  display: block;
+  width: 70px;
+  height: 70px;
+
 }
