--- a/style/scss/_interface.scss
+++ b/style/scss/_interface.scss
@@ -23,3 +23,14 @@
     }
   }
 }
+.message{
+  position: absolute;
+  top: 100px;
+  left: 500px;
+  z-index: 1;
+  font-size: 40px;
+  font-weight: bold;
+  .show__message p{
+    color: red;
+  }
+}
