--- a/style/scss/_map.scss
+++ b/style/scss/_map.scss
@@ -4,14 +4,14 @@
 .map__img{
   margin: 0 auto;
   display: block;
-  width: 1100px;
+  width: 65%;
 }
 .map__zone{
   position: absolute;
-  width: 600px;
-  height: 530px;
-  top: 80px;
-  left: 380px;
+  width: 40%;
+  height: 70%;
+  top: 10%;
+  left: 27%;
   transition: .3s linear;
   border: 3px dashed black;
   opacity: 0.6;
@@ -19,16 +19,16 @@
 }
 .zone_marker{
   position: absolute;
-  width: 600px;
-  height: 530px;
-  top: 80px;
-  left: 380px;
+  width: 40%;
+  height: 70%;
+  top: 10%;
+  left: 27%;
 
 }
 .marker{
   position: absolute;
   display: block;
-  width: 70px;
-  height: 70px;
+  width: 15%;
+  height: 15%;
 
 }
