--- a/style/scss/style.scss
+++ b/style/scss/style.scss
@@ -1,5 +1,6 @@
 @import "map";
 @import "interface";
+@import "media";
 *{
   box-sizing: border-box;
   margin: 0;
@@ -11,7 +12,7 @@ body{
 }
 .page{
   position: relative;
-  width: 1400px;
+  width: 100%;
   margin: 0 auto;
 }
 
